--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,2 @@
-server.port=8761
-
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+eureka.client.serviceUrl.defaultZone: https://eureka.web.elasticloud.uy:8761/eureka
+eureka.client.instance.preferIpAddress = true
