--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 #eureka.instance.hostname=localhost
 
-eureka.client.serviceUrl.defaultZone: https://eureka.web.elasticloud.uy:8761/eureka
-eureka.client.instance.preferIpAddress = true
+eureka.client.serviceUrl.defaultZone: https://stock.web.elasticloud.uy:8761/eureka
+#eureka.client.instance.preferIpAddress = true
