--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8761
+#server.port=8761
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 #eureka.instance.hostname=localhost
 
-eureka.client.serviceUrl.defaultZone: https://eureka-test.web.elasticloud.uy:8761/eureka
+eureka.client.serviceUrl.defaultZone: https://eureka-test.web.elasticloud.uy/eureka
 #eureka.client.instance.preferIpAddress = true
